integration tests executed by failsafe plugin